--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,19 @@ emoji==2.11.1
 gensim==4.3.2
 imbalanced_learn==0.12.3
 imblearn==0.0
-keras==3.3.3
+keras_tuner==1.4.7
 matplotlib==3.8.4
+nlpaug==1.1.11
 nltk==3.8.1
 numpy==2.1.0
 pandas==2.2.2
 scikit_learn==1.4.2
 seaborn==0.13.2
+tabulate==0.9.0
 tensorflow==2.17.0
 tensorflow_intel==2.17.0
+torch==2.3.0
+tqdm==4.66.2
 transformers==4.40.1
 vaderSentiment==3.3.2
 vaderSentiment==3.3.2
